--- a/client/src/styles/_variable.scss
+++ b/client/src/styles/_variable.scss
@@ -1,6 +1,10 @@
 // sizes
 $pageWidth: 1200px;
+$pageWidthTablet: 85%;
+$pageWidthMobile: 90%;
 $restaurantListWidth: 30%;
+$restaurantListWidthTablet: 46%;
+$restaurantListWidthMobile: 100%;
 
 // colors
 $lightBlack: #262626;
