--- a/client/src/styles/_template.scss
+++ b/client/src/styles/_template.scss
@@ -6,3 +6,13 @@
   margin-right: auto;
   padding-top: 40px;
 }
+
+@media only screen and (max-width: 1199px) {
+  .gj-page {
+    width: $pageWidthTablet;
+  }
+}
+
+@media only screen and (max-width: 599px) {
+
+}
