--- a/client/src/components/TopBar/index.scss
+++ b/client/src/components/TopBar/index.scss
@@ -4,7 +4,8 @@
   // box-shadow: 0 20px 50px -20px rgba(0, 0, 0, 0.1) !important;
   background-color: #ffffff;
   box-shadow: 0 20px 50px -18px rgba(0, 0, 0, 0.5) !important;
-  position: fixed !important;
+  position: sticky !important;
+  top: 0;
 }
 
 .gj-topbar-content {
